--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,11 +6,9 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "jquery": "^3.3.1",
-    "markdown-it": "^8.4.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "1.1.5",
-    "snoowrap": "1.15.2"
+    "react-scripts": "1.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
