--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "brace": "^0.11.1",
     "classnames": "^2.2.6",
     "jquery": "^3.3.1",
     "react": "^16.5.2",
+    "react-ace": "^6.2.0",
     "react-dom": "^16.5.2",
     "react-scripts": "1.1.5"
   },
